# RAG-based-QA-webapp

./: .gitignore  README.md  main.py  pyproject.toml
Frontend/: package-lock.json  package.json  pyproject.toml  vite.config.js
Frontend/src/: App.jsx  index.css
static/: index.html
static/assets/: index-BXuaNJRJ.css  index-C39gK6jS.js
